--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-babel==2.10.3
-python-dateutil==2.8.2
-flask-moment==1.0.2
-flask-wtf==1.0.1
-flask_sqlalchemy==2.5.1
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-Flask==2.1.2
-Werkzeug==2.1.2
-postgres==4.0
-psycopg2-pool==1.1
-psycopg2-binary==2.9.3
+babel
+python-dateutil
+flask-moment
+flask-wtf
+flask_sqlalchemy
+Jinja2
+MarkupSafe
+Flask
+Werkzeug
+postgres
+psycopg2-pool
+psycopg2-binary
